crates/ftui-core/tests/compile_fail/raw_cannot_enable_paste.stderr
error[E0599]: no method named `enable_bracketed_paste` found for struct `ftui_core::mode_typestate::TerminalMode<1>` in the current scope
 --> tests/compile_fail/raw_cannot_enable_paste.rs:6:9
  |
6 |     raw.enable_bracketed_paste();
  |         ^^^^^^^^^^^^^^^^^^^^^^
  |
help: there is a method `has_bracketed_paste` with a similar name
  |
6 -     raw.enable_bracketed_paste();
6 +     raw.has_bracketed_paste();
  |
